--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -229,6 +229,7 @@
     <Content Include="Content\dist\i\footer-bg-sm.jpg" />
     <Content Include="Content\dist\i\footer-bg-xs.jpg" />
     <Content Include="Content\dist\js\ge-for-gamers-block.min.js" />
+    <Content Include="Content\dist\js\ge-last-category-block.min.js" />
     <Content Include="Content\dist\js\ge-last-news-block.min.js" />
     <Content Include="Content\dist\js\jquery.validate.min.js" />
     <Content Include="Content\dist\js\jquery.validate.unobtrusive.min.js" />
@@ -254,6 +255,7 @@
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt.settings.xml" />
     <Content Include="packages.config" />
+    <Content Include="Scripts\ge-last-category-block.js" />
     <Content Include="Scripts\user-clicks-engine.js" />
     <Content Include="Scripts\find-engine.js" />
     <Content Include="Scripts\ge-for-gamers-block.js" />
