--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -174,6 +174,7 @@
     <Compile Include="CommentsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ValuteController.cs" />
     <Compile Include="ErrorController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -220,6 +221,9 @@
     <Compile Include="UserClicksController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="ValuteController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Content Include="Content\dist\css\error-page.min.css" />
     <Content Include="Content\dist\css\site.min.css" />
     <Content Include="Content\dist\fonts\fontawesome-webfont.svg" />
@@ -229,6 +233,7 @@
     <Content Include="Content\dist\i\footer-bg-md.jpg" />
     <Content Include="Content\dist\i\footer-bg-sm.jpg" />
     <Content Include="Content\dist\i\footer-bg-xs.jpg" />
+    <Content Include="Content\dist\js\currency-provider.min.js" />
     <Content Include="Content\dist\js\ge-for-gamers-block.min.js" />
     <Content Include="Content\dist\js\ge-last-category-block.min.js" />
     <Content Include="Content\dist\js\ge-last-news-block.min.js" />
@@ -256,6 +261,7 @@
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt.settings.xml" />
     <Content Include="packages.config" />
+    <Content Include="Scripts\currency-provider.js" />
     <Content Include="Scripts\ge-last-category-block.js" />
     <Content Include="Scripts\user-clicks-engine.js" />
     <Content Include="Scripts\find-engine.js" />
@@ -399,6 +405,7 @@
     <Folder Include="Content\dist\i\temp\" />
     <Folder Include="Views\Seo\" />
     <Folder Include="Views\UserClicks\" />
+    <Folder Include="Views\Valute\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GE.WebCoreExtantions\GE.WebCoreExtantions.csproj">
