--- a/GE.WebAdmin/Views/web.config
+++ b/GE.WebAdmin/Views/web.config
@@ -22,6 +22,7 @@
         <add namespace="GE.WebAdmin.Models"/>
         <add namespace="SX.WebCore.HtmlHelpers"/>
         <add namespace="SX.WebCore.Abstract"/>
+        <add namespace="SX.WebCore.ViewModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
