--- a/GE.WebAdmin/Web.config
+++ b/GE.WebAdmin/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=tcp:fc6iu7ju6s.database.windows.net,1433;Database=game-exe.com;User ID=simlex@fc6iu7ju6s;Password=Luia121212;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" />-->
-    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;" />
+    <add name="DbContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H2K9G16;Initial Catalog=gameexecom;Persist Security Info=True;User ID=sa;Password=Luia124445#" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
