--- a/GE.WebAdmin/Web.Release.config
+++ b/GE.WebAdmin/Web.Release.config
@@ -7,13 +7,13 @@
     In the example below, the "SetAttributes" transform will change the value of 
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
     finds an attribute "name" that has a value of "MyDB".
-    
-    <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
-    </connectionStrings>
-  -->
+    -->
+  <connectionStrings>
+    <add name="DbContext"
+      connectionString="Server=37.140.192.61;Database=u0103269_gameexecom;User ID=u0103269_developer;Password=Luia124445#;Connection Timeout=30;"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
+
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
