--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Managers\SxSeoWordCounter.cs" />
     <Compile Include="PictureHandler.cs" />
     <Compile Include="Providers\QueryProvider.cs" />
+    <Compile Include="Repositories\RepoBannedUrl.cs" />
     <Compile Include="Repositories\RepoManual.cs" />
     <Compile Include="Repositories\RepoMaterialCategory.cs" />
     <Compile Include="Repositories\RepoLike.cs" />
@@ -162,6 +163,7 @@
     <Compile Include="SxAppRole.cs" />
     <Compile Include="SxAppUser.cs" />
     <Compile Include="SxArticle.cs" />
+    <Compile Include="SxBannedUrl.cs" />
     <Compile Include="SxBBCodeParser.cs" />
     <Compile Include="SxComment.cs" />
     <Compile Include="SxDbContext.cs" />
