--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -137,6 +137,7 @@
     <Compile Include="HtmlHelpers\SxList.cs" />
     <Compile Include="HtmlHelpers\SxPager.cs" />
     <Compile Include="HtmlHelpers\SxTagsCloud.cs" />
+    <Compile Include="HtmlHelpers\SxTree.cs" />
     <Compile Include="HtmlHelpers\SxTreeView.cs" />
     <Compile Include="Managers\SxAppRoleManager.cs" />
     <Compile Include="Managers\SxAppSignInManager.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Repositories\RepoManual.cs" />
     <Compile Include="Repositories\RepoMaterialCategory.cs" />
     <Compile Include="Repositories\RepoLike.cs" />
+    <Compile Include="Repositories\RepoProjectStep.cs" />
     <Compile Include="Repositories\RepoUserClick.cs" />
     <Compile Include="Resources\Files.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -178,6 +180,7 @@
     <Compile Include="SxNews.cs" />
     <Compile Include="SxPicture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SxProjectStep.cs" />
     <Compile Include="SxRedirect.cs" />
     <Compile Include="SxRequest.cs" />
     <Compile Include="SxSeoInfo.cs" />
