--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -198,6 +198,7 @@
     <Compile Include="SxStatistic.cs" />
     <Compile Include="SxUserClick.cs" />
     <Compile Include="SxUserClickResult.cs" />
+    <Compile Include="SxVideo.cs" />
     <Compile Include="ViewModels\SxVMValute.cs" />
     <Compile Include="ViewModels\SxVMMaterialTag.cs" />
     <Compile Include="UrlHelper.cs" />
