--- a/GE.WebAdmin/bower.json
+++ b/GE.WebAdmin/bower.json
@@ -29,8 +29,8 @@
     "ckeditor": "4.5.7",
     "metisMenu": "2.4.3",
     "bootstrap-datepicker": "1.6.0",
-    "bootstrap-colorpicker": "*",
-    "jquery": "2.2.2",
+    "bootstrap-colorpicker": "2.3.3",
+    "jquery": "2.2.3",
     "lightbox2": "2.8.2"
   }
 }
