--- a/SX.WebCore/SX.WebCore.csproj
+++ b/SX.WebCore/SX.WebCore.csproj
@@ -199,6 +199,7 @@
     <Compile Include="SxUserClick.cs" />
     <Compile Include="SxUserClickResult.cs" />
     <Compile Include="SxVideo.cs" />
+    <Compile Include="SxVideoLink.cs" />
     <Compile Include="ViewModels\SxVMValute.cs" />
     <Compile Include="ViewModels\SxVMMaterialTag.cs" />
     <Compile Include="UrlHelper.cs" />
