--- a/GE.WebAdmin/GE.WebAdmin.csproj
+++ b/GE.WebAdmin/GE.WebAdmin.csproj
@@ -196,6 +196,9 @@
     <Compile Include="AccountController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="AphorismsController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -216,6 +219,7 @@
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AphorismsController.cs" />
     <Compile Include="Controllers\BannerGroupsController.cs" />
     <Compile Include="Controllers\BannersController.cs" />
     <Compile Include="Controllers\BannedUrlsController.cs" />
@@ -280,8 +284,10 @@
     <Compile Include="MaterialTagsController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\VMAphorism.cs" />
     <Compile Include="Models\VMBanner.cs" />
     <Compile Include="Models\VMBannerGroup.cs" />
+    <Compile Include="Models\VMEditAphorism.cs" />
     <Compile Include="Models\VMEditBannedUrl.cs" />
     <Compile Include="Models\VMBannedUrl.cs" />
     <Compile Include="Models\VMEditBanner.cs" />
@@ -471,6 +477,9 @@
     <Content Include="Views\VideoLinks\_GridView.cshtml" />
     <Content Include="Views\Shared\_NotMaterialVideos.cshtml" />
     <Content Include="Views\VideoLinks\_GridViewNotLinked.cshtml" />
+    <Content Include="Views\Aphorisms\_Categories.cshtml" />
+    <Content Include="Views\Aphorisms\Index.cshtml" />
+    <Content Include="Views\Aphorisms\Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
