--- a/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
+++ b/GE.WebCoreExtantions/GE.WebCoreExtantions.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IHasGame.cs" />
+    <Compile Include="Aphorism.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="News.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="DbContext.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\RepoAphorism.cs" />
     <Compile Include="Repositories\RepoArticle.cs" />
     <Compile Include="Repositories\RepoBannerGroup.cs" />
     <Compile Include="Repositories\RepoBanner.cs" />
